Update TIP 284 implementation location

--- a/tip/284.md
+++ b/tip/284.md
@@ -6,7 +6,7 @@
 	Created:        01-Oct-2006
 	Post-History:   
 	Tcl-Version:    8.7
-	Tcl-Ticket:     1577324
+	Tcl-Branch:     tip-284
 -----
 
 # Abstract
@@ -65,10 +65,8 @@ The new command **invoke** could be implemented as:
 
 # Reference Implementation and Documentation
 
-[RFE 1577324] \(which depends on [Patch 1577278]\) provides an
+[RFE 1577324](https://core.tcl-lang.org/tcl/tktview/1577324) \(which depends on [Patch 1577278](https://core.tcl-lang.org/tcl/tktview/1577278)\) provides an
 implementation of **namespace invoke**.
-<https://sourceforge.net/support/tracker.php?aid=1577324> 
-<https://sourceforge.net/support/tracker.php?aid=1577278> 
 
 # Differences to Other Commands
 
