--- a/tip/480.md
+++ b/tip/480.md
@@ -211,8 +211,8 @@ draft of this proposal, circulated privately, suggested `::tcl::assume` (since
 it was seen as a claim that it is safe for a compiler to make a given
 assumption). This name was roundly rejected by the reviewers. An alternative
 that was counterproposed was `::tcl::assert`. The disadvantage to the latter
-name is that it is easy to imagine a piece of code wanting to `[[namespace
-import]]` both `::tcl::assert` and `::control::assert` leading to a name
+name is that it is easy to imagine a piece of code wanting to `namespace
+import` both `::tcl::assert` and `::control::assert` leading to a name
 collision. Moreover, `::tcl::assert` does not take a Boolean expression but
 rather a different sort of expression of a constraint. The similarity of the
 names would therefore be confusing. In names, as in many other aspects of
