TIP #541 accepted 4/0/2: YES: 4 (Griffin, Landers, Nijtmans, Vogel). NO: -. PRESENT: 2 (Fellows, Kenny). Vote conclusion email was sent 26-May-2019 to Tcl Core list.

--- a/tip/541.md
+++ b/tip/541.md
@@ -1,8 +1,8 @@
 # TIP 541: Add support for 'end' index in ttk::combobox current
-	Author:         François Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	Author:         Francois Vogel <fvogelnew1@free.fr>
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        8-May-2019
 	Post-History:   
 	Keywords:       Tcl
