--- a/tip/541.md
+++ b/tip/541.md
@@ -1,6 +1,6 @@
 # TIP 541: Add support for 'end' index in ttk::combobox current
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        8-May-2019
