Editorial cleanup of 529

--- a/tip/529.md
+++ b/tip/529.md
@@ -16,7 +16,6 @@ An additional property is proposed for photo images to hold image metadata:
     myimage cget -metadata
     myimage configure -metadata [dict create dpi 300.0]
 
-
 # Rationale
 
 Image files may contain a lot of metadata like resolution, comments, GPS location etc.
@@ -45,18 +44,22 @@ This may be expressed (when all packages are adopted) by:
 
 # Specification
 
-## Metadata dict
+## Metadata Dict
 
-The propery "-metadata" is added to each image file.
-It contains a dict, where the keys are specified for each image format.
+The propery "**-metadata**" is added to each image.  It contains a dictionary,
+where the keys of the dictionary are specific to each photo image format.
 
-The following default keys are used, if the corresponding data is present:
+The following default keys are used by Tk's built in photo image formats, if the
+corresponding data is present:
 
-| key     | description      | example image formats |
+| Key     | Description      | Example image formats |
 |:-------:|:----------------:|:---------------------:|
-| dpi     | Image resolution | png                   |
-| comment | Text comment     | gif                   |
-| xmp     | xmp image data   | png                   |
+| `dpi`     | Image resolution | png                   |
+| `comment` | Text comment     | gif                   |
+| `xmp`     | xmp image data   | png                   |
+
+If a particular image does not specify any keys (whether during creation or
+otherwise) then the dictionary will be empty.
 
 ## Commands
 
@@ -66,10 +69,12 @@ The following commands are directly concerned:
     myimage cget -metadata
     myimage configure -metadata $metadict
 
-It is also ok to store application data related to the image within the property dict. A widget may store special properties.
+It is also OK to store application data related to the image within the
+property dict. A widget may store special properties; Tk will store and return
+values it does not recognise, but otherwise will ignore them.
 
-Any load and save command may use the content of the metadata dict.
-This may be an ongoing process, specially within the Img patch.
+Any load and save command may use the content of the metadata dict.  This may
+be an ongoing process, specially within the Img patch.
 
 The commands are:
 
@@ -77,15 +82,16 @@ The commands are:
     myimage configure -file myfile.bmp
     myimage write file.bmp
 
-The image create and file load functions recreate the metadata dict.
+The **image create** and file loading functions recreate the metadata dict.
 Any current contents is lost.
 
-The write file commands uses any dict keys it knows.
-Any unknown dict keys are ignored.
+The **write** method uses any dict keys it knows.  Any unknown dict keys
+are ignored.
 
-## C interface
+## C Interface
 
-The current C interface for drivers and other programs is not sufficient to support the metadata dict.
+The current C interface for drivers and other programs is not sufficient to
+support the metadata dict.
 
 A new extensible interface is envisaged with:
 
@@ -93,29 +99,38 @@ A new extensible interface is envisaged with:
    *   a new driver interface to basically only pass the command.
    *   and a compatibility layer to the current driver interface
 
-There are currently functions to access the raster data (Tk_PhotoGetImage, Tk_PhotoPutBlock).
-The other properties (-file, -data, -format, -gamma) are not exposed.
+There are currently functions to access the raster data (`Tk_PhotoGetImage`,
+`Tk_PhotoPutBlock`).  The other properties (**-file**, **-data**, **-format**,
+**-gamma**) are not exposed.
 
-A new interface may also be used for other image formats like svg where the image data consists of the rastered image, the image data and metadata.
-In this case, an image save operation might even not use the raster data but only metadata and image data.
+A new interface may also be used for other image formats like SVG where the
+image data consists of the rastered image, the image data and metadata.  In
+this case, an image save operation might even not use the raster data but only
+metadata and image data.
 
-### image property get and set functions
+### Image Property get and set Functions
 
 Two new stub table functions are added:
 
-    Tcl_Obj * Tk_PhotoGetOption(Tk_PhotoHandle handle, char *OptionName)
+ 1.  Tcl\_Obj \* **Tk\_PhotoGetOption**(Tk\_PhotoHandle _handle_, const char \*_OptionName_)
 
-    void Tk_PhotoSetOption(Tk_PhotoHandle handle, char *OptionName, Tcl_Obj *optionValue)
+    This retrieves the current value of an option.
 
-### Revised image driver commands
+ 2. void **Tk\_PhotoSetOption**(Tk\_PhotoHandle _handle_, const char \*_OptionName_, Tcl\_Obj \*_optionValue_)
 
-The new command interface only passes the image handle. Any required data may be accquired by the get/set functions. Also, access to the raster data is done by the raster access functions.
+    This updates or creates the value of an option.
+
+### Revised Image Driver Commands
+
+The new command interface only passes the image handle. Any required data may
+be accquired by the get/set functions. Also, access to the raster data is done
+by the raster access functions.
 
 The current registration function is
+
     Tk_CreatePhotoImageFormat()
 
 ...
-
 
 # Implementation
 
@@ -128,7 +143,7 @@ I am realy a novice here.
 
 Implementation may start soon with the tag tip-529-image-metadata.
 
-# Rejected alternatives
+# Rejected Alternatives
 
 ## C interface: only use metadata dict get and set functions
 
