TIP 526 has a branch now

--- a/tip/526.md
+++ b/tip/526.md
@@ -6,6 +6,7 @@
 	Created:        08-Nov-2018
 	Tcl-Version:    9.0
 	Post-History:
+	Tcl-Branch:     tip-526
 ------
 
 # Abstract
@@ -110,3 +111,7 @@ That also looks weird, but is better in that it only has the potential for
 trouble in one place and allows for better compilation of the outer parts of
 the expression. (Yes, it produces a different result from the other code. This
 is likely to be a good thing in almost all cases.)
+
+# Copyright
+
+This document has been placed in the public domain.
