Withdrawn 292 at request of author

--- a/tip/292.md
+++ b/tip/292.md
@@ -1,5 +1,5 @@
 # TIP 292: Allow Unquoted Strings in Expressions
-	State:		Draft
+	State:		Withdrawn
 	Type:		Project
 	Tcl-Version:	8.7
 	Vote:		Pending
