Split TIP #542 into 2 separate TIP's.

--- a/tip/542.md
+++ b/tip/542.md
@@ -1,4 +1,4 @@
-# TIP 542: New encodings: UTF-16, UCS-2, Support for switchable (Androwish-compatible) Full Unicode support. 
+# TIP 542:Support for switchable (Androwish-compatible) Full Unicode support. 
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
@@ -14,9 +14,9 @@
 
 # Abstract
 
-This TIP proposes to add more encodings, and being able to switch Tcl
-between Full Unicode mode (TCL\_UTF\_MAX>3, almost compatible with Androwish) and
-current partial Unicode mode (as far as TIP #389 goes, using TCL\_UTF\_MAX=3) 
+This TIP proposes being able to switch Tcl between Full Unicode mode
+(TCL\_UTF\_MAX>3, almost compatible with Androwish) and current partial
+Unicode mode (as far as TIP #389 goes, using TCL\_UTF\_MAX=3) 
 
 # Rationale
 
@@ -47,8 +47,6 @@ upwards compatible with Tcl 8.6.
 
 This document proposes:
 
- * Add new encodings "utf-16", "utf-16le", "utf-16be", "ucs-2", "ucs-2le", "ucs-2be".
-
  * Allow Tcl to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4.
    In the latter mode, the Tcl_UniChar type becomes a 32-bit type, but the stub entries for
    the 16-bit Tcl\_UniChar type are present as well. So, most extensions compiled with -DTCL\_UTF\_MAX=3
@@ -56,9 +54,6 @@ This document proposes:
 
  * Allow Tcl extensions to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4,
    when Tcl is compiled with -DTCL\_UTF\_MAX=4.
-
- * Deprecate the "unicode" encoding. "utf-16" is supposed to be used in stead. The "unicode" encoding
-   will NOT be removed in Tcl 9.0, since it's too common.
 
  * Enhance the Tcl\_UniCharToUtfDString() function such that the uniLength parameter is allowed to
    have the value -1.
@@ -104,9 +99,8 @@ This document proposes:
 As long as Tcl is compiled with -DTCL\_UTF\_MAX=3, this is fully upwards compatible.
 
 When Tcl is compiled with -DTCL\_UTF\_MAX=4, this is at the Tcl level, compatible with the Androwish-version
-of Tcl with one exception: In Androwish the "unicode" encoding is 32-bit, in Tcl it continues
-to be 16-bit, an alias for "utf-16". At the C-API level, it's upwards compatible with Tcl 8.6 in
-TCL\_UTF\_MAX=6 mode, except for the functions marked above as deprecated. Those functions will be gone.
+of Tcl. At the C-API level, it's upwards compatible with Tcl 8.6 in TCL\_UTF\_MAX=6 mode, except for the
+functions marked above as deprecated. Those functions will be gone.
 
 # Caveats
 
