TIP's 537 and 544 are final now.

--- a/tip/537.md
+++ b/tip/537.md
@@ -1,8 +1,8 @@
 # TIP 537: Enable 64-bit indexes in regexp matching
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        7-April-2019
 	Post-History:   
 	Keywords:       Tcl
