--- a/tip/544.md
+++ b/tip/544.md
@@ -1,10 +1,10 @@
 # TIP 544: Export TclGetIntForIndex()
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         François Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           In progress
+	Vote:           Done
 	Created:        15-May-2019
 	Post-History:
 	Discussions-To: Tcl Core list
