New TIP #548: Deprecate Tcl_WinUtfToTChar() and Tcl_WinTCharToUtf() and provide more flexible replacement functions.

--- a/tip/542.md
+++ b/tip/542.md
@@ -55,9 +55,6 @@ This document proposes:
  * Allow Tcl extensions to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4,
    when Tcl is compiled with -DTCL\_UTF\_MAX=4.
 
- * Enhance the Tcl\_UniCharToUtfDString() function such that the uniLength parameter is allowed to
-   have the value -1.
- 
  * Deprecate the following functions:
 
      Tcl\_AppendUnicodeToObj()
@@ -81,17 +78,14 @@ This document proposes:
    If Tcl is compiled with either -DTCL\_UTF\_MAX=4 or -DTCL\_NO\_DEPRECATED, those functions will no longer be available for extensions, as well as in Tcl 9.0.
 
 
- * New functions:
+ * New function:
      
-     Tcl\_Utf16ToUtfDString()
-     
-     Tcl\_UtfToUtf16DString()
-
      Tcl\_UtfToUtf16()
 
-     Those are the same as the _UniChar_ variants, but they use the "unsigned short" type in stead of Tcl\_UniChar.
+     This function does almost the same as Tcl\_UtfToUniChar(), but it writes 16-bit Unicode Characters ("unsigned short") independent
+     of the value of -DTCL\_UTF\_MAX.
 
-     Those functions can be used if you want your extension to compile with either -DTCL\_UTF\_MAX=3 or -DTCL\_UTF\_MAX=4,
+     This function can be used if you want your extension to compile with either -DTCL\_UTF\_MAX=3 or -DTCL\_UTF\_MAX=4,
      but still want to use the 16-bit conversions independent on the TCL\_UTF\_MAX setting or Tcl\_UniChar type.
 
 # Compatibility
