More TIP #548 explanation.

--- a/tip/548.md
+++ b/tip/548.md
@@ -36,23 +36,48 @@ This document proposes:
      Tcl\_WinTCharToUtf()
 
    If Tcl is compiled with either -DTCL\_UTF\_MAX=6 (which is not officially supported) or -DTCL\_NO\_DEPRECATED, those functions will
-   no longer be available for extensions. In Tcl 9.0, those functions will be completely removed.
+   no longer be available. In Tcl 9.0, those functions will be completely removed.
 
- * New functions:
-     
-     Tcl\_Utf16ToUtfDString()
-     
-     Tcl\_UtfToUtf16DString()
+ * Enhance the Tcl\_UniCharToUtfDString() function such that the uniLength parameter is allowed to
+   have the value -1. In that case, the UniChar string will be read up to the closing /u0000 character.
 
-     Those are the same as the _UniChar_ variants (Tcl\_UniCharToUtfDString/Tcl\_UtfToUniCharDString), but they use an "unsigned short"
-     pointer type in their signature stead of a Tcl\_UniChar pointer type.
-     In addition, Tcl\_Utf16ToUtfDString() now accepts the value -1 as length parameter.
+ * New replacement functions:
+
+     Tcl\_UtfToUtf16DString(), replaces Tcl\_WinUtfToTChar()
+
+     Tcl\_Utf16ToUtfDString(), replaces Tcl\_WinTCharToUtf()
+
+     Those are the same as the already existing _UniChar_ variants (Tcl\_UniCharToUtfDString/Tcl\_UtfToUniCharDString), but they use an "unsigned short"
+     pointer type in their signature stead of a "Tcl\_UniChar" pointer type, which is always 16-bits.
+     Tcl\_Utf16ToUtfDString() accepts - just as Tcl\_UniCharToUtfDString() - the value -1 as length parameter.
 
      Those functions can be used if you want your extension to compile with -DTCL\_UTF\_MAX=3, -DTCL\_UTF\_MAX=4 or -DTCL\_UTF\_MAX=6,
      but still want to use the 16-bit conversions independent on the TCL\_UTF\_MAX setting or Tcl\_UniChar type.
 
- * Enhance the Tcl\_UniCharToUtfDString() function such that the uniLength parameter is allowed to
-   have the value -1.
+     Those functions are available on all platforms, not only Windows.
+
+# How to upgrade.
+
+In your extension, replace the call:
+
+     Tcl_WinUtfToTChar(....., bufPtr);
+     
+with the following two lines:
+
+     Tcl_DStringInit(bufPtr);
+     Tcl_UtfToUtf16DString(....., bufPtr);
+
+And also, replace:
+
+     Tcl_WinTCharToUtf(....., bufPtr);
+     
+with the following two lines:
+
+     Tcl_DStringInit(bufPtr);
+     Tcl_Utf16ToUtfDString(....., bufPtr);
+
+If the Tcl\_WinTCharToUtf() call originally had a "length" parameter not equal to -1, divide it by 2 (or ... don't multiply it by 2 any more).
+
 
 # Compatibility
 
